fixed: strange mobile overflow behavior

--- a/site/src/styles/custom/layout/_grid-layouts.sass
+++ b/site/src/styles/custom/layout/_grid-layouts.sass
@@ -49,12 +49,9 @@
 
 .image-gallery-wrapper
     display: grid
-    grid-template: auto / repeat(auto-fill, minmax(90px, 1fr))
+    grid-template: auto / repeat(auto-fill, minmax(120px, 1fr))
     grid-row-gap: $gap / 3
     grid-column-gap: $gap / 6
-
-    & > button:first-child
-        grid-column: 1 / -1
 
 .sanity-image-gallery
     display: grid
